--- a/report.tex
+++ b/report.tex
@@ -129,10 +129,33 @@ Hoy en día, los microprocesadores son la base de la electrónica moderna, y se 
 variedad de dispositivos, desde teléfonos inteligentes y tabletas hasta automóviles y equipos médicos.
 
 \subsection*{Primera generación vs actualidad}
-Comparación entre los microprocesadores de primera generación y los actuales
-
-
+A continuación se ofrece una comparación entre el primer microprocesador comercial de la historia, 
+el Intel 4004 y uno de los más avanzados y potentes del mercado actual, el AMD Ryzen 9 5950X. 
+El microprocesador Intel 4004 contaba con una capacidad de procesamiento de tan solo 4 bits y una 
+velocidad de reloj de 740kHz, además no contaba con unidades de coma flotante ni caché, lo que limitaba 
+significativamente su rendimiento. En cambio el AMD Ryzen 9 5950X cuanta con una capacidad de procesamiento
+de 64 bits (16 veces superior al Intel 4004) y una velocidad de reloj de hasta 4.9GHz (aproximadamente 6000 veces superior 
+al Intel 4004), además de contar con múltiples núcleos y subprocesos, lo que le permite realizar tareas complejas 
+y exigentes con una eficiencia impresionante. Los microprocesadores actuales también cuentan con tecnologías avanzadas 
+como la inteligencia artificial, la virtualización y la aceleración por hardware, lo que les permite manejar 
+grandes cantidades de datos y realizar tareas especializadas con rapidez y precisión. En resumen, la evolución de 
+los microprocesadores ha sido impresionante en términos de capacidad de procesamiento, velocidad y tecnologías avanzadas.
 
 \section*{Conclusiones}
+
+En conclusión, la historia del transistor, circuito integrado y microprocesador es fascinante e innovadora. 
+Estos avances tecnológicos han cambiado la forma en que vivimos, trabajamos y nos comunicamos en el mundo moderno. 
+El transistor permitió la creación de dispositivos electrónicos más pequeños, eficientes y asequibles, 
+lo que a su vez condujo al desarrollo de los circuitos integrados y, finalmente, a la invención del microprocesador.
+
+El circuito integrado y el microprocesador son dos de los avances más importantes en la historia de la informática, 
+permitiendo la creación de computadoras personales y dispositivos móviles que han transformado la forma en que la gente trabaja, 
+estudia y se entretiene. Además, estos avances han mejorado significativamente la eficiencia y la precisión de los sistemas de control 
+y de automatización, lo que ha impulsado la industria manufacturera y otros sectores.
+
+A lo largo de la historia, el transistor, el circuito integrado y el microprocesador han sido objeto de una investigación 
+y desarrollo continuos, y se espera que sigan evolucionando en el futuro. El impacto de estos avances tecnológicos 
+en nuestra sociedad es indudable, y es probable que continúen transformando nuestras vidas 
+en formas aún más sorprendentes e inesperadas en los años venideros.
 
 \end{document}
