--- a/report.tex
+++ b/report.tex
@@ -17,8 +17,20 @@
 \title{Los tres grandes}
 \author{Karlos Alejandro Alfonso Rodríguez C411\\Karel Camilo Manresa Leon C412}
 \maketitle
+\newpage
 
 \section*{Resumen}
+Este trabajo tiene como objetivo explorar la historia y la evolución de tres componentes electrónicos clave 
+que han impulsado la revolución electrónica: el transistor, el circuito integrado y el microprocesador. 
+Se abordará su desarrollo, características y aplicaciones, y explorará los avances tecnológicos 
+recientes en electrónica que podrían tener un impacto significativo en la tecnología del futuro. 
+La investigación cubre la historia del transistor desde su creación en la década de 1930, 
+hasta la invención del primer transistor por William Shockley, John Bardeen y Walter Brattain en 1947, 
+y sus posteriores avances. Además de la historia y el desarrollo del circuito integrado y el microprocesador, 
+y su impacto en la electrónica moderna. En general, la investigación proporciona una visión de la industria 
+electrónica moderna y su importancia en la vida diaria.
+
+\newpage
 
 \section*{Introducción}
 
@@ -35,18 +47,11 @@ permitió la miniaturización de estos circuitos al integrar varios transistores
 en un solo chip de silicio, lo que aumentó la velocidad, la eficiencia y la capacidad 
 de procesamiento. El microprocesador se convirtió en el cerebro de los sistemas informáticos y ha permitido
 la creación de una amplia variedad de dispositivos electrónicos, desde teléfonos móviles hasta 
-robots industriales.
+robots industriales. En definitiva, se trata de una investigación muy relevante que permite comprender 
+el desarrollo de la tecnología en el siglo XX y la influencia que los componentes electrónicos han 
+tenido en ella.
 
-Este trabajo de investigación tiene como objetivo explorar la historia y evolución del transistor, 
-circuito integrado y microprocesador, tres componentes electrónicos clave que han impulsado 
-la revolución electrónica. Se abordará su desarrollo, sus características y sus aplicaciones. 
-Además, se explorarán algunos avances tecnológicos recientes en la electrónica que podrían tener 
-un gran impacto en la tecnología del futuro.
-
-En definitiva, se trata de una investigación muy relevante que permite comprender el desarrollo de la tecnología
-en el siglo XX y la influencia que los componentes electrónicos han tenido en ella. Es por eso 
-que este trabajo de investigación busca ser una contribución a la comprensión de la electrónica moderna 
-y su importancia en nuestra vida diaria.
+\newpage
 
 \section*{Transistor}
 
@@ -72,7 +77,7 @@ En la década de 1970, se produjo otro gran avance en la tecnología de transist
 transistor de unión bipolar de metal-óxido (MOS). Este transistor era aún más pequeño que los FET y consumía 
 menos energía, lo que lo hacía ideal para su uso en dispositivos móviles. 
 
-En las décadas siguientes, la miniaturizaciónde los transistores continuó a un ritmo acelerado. En la década de 1980, 
+En las décadas siguientes, la miniaturización de los transistores continuó a un ritmo acelerado. En la década de 1980, 
 se desarrollaron los transistores de alta velocidad para su uso en la electrónica de telecomunicaciones y en la década
 de 1990, se produjo un gran avance con el desarrollo del transistor de efecto túnel (TFET), que permitía una mayor 
 eficacia energética y un mayor rendimiento.
@@ -95,13 +100,9 @@ El primer circuito integrado fue desarrollado por Jack Kilby de Texas Instrument
 y Robert Noyce de Fairchild Semiconductor en 1958. El primer CI contenía sólo un par de transistores, 
 pero pronto se desarrollaron chips con docenas, cientos y, finalmente, miles de componentes. 
 En 1961, Fairchild Semiconductor lanzó el primer circuito integrado comercial, que contenía 
-cuatro transistores y cinco resistencias.
-
-En 1964, la empresa japonesa Toshiba comenzó a producir circuitos integrados a gran escala, 
-lo que permitió la producción de chips con cientos de componentes. El primer microprocesador, 
-el Intel 4004, se desarrolló en 1971 y contenía 2,300 transistores. Los microprocesadores se convirtieron 
-en la base de la computación moderna y permitieron el desarrollo de computadoras personales, teléfonos móviles, 
-sistemas de control de automóviles y muchos otros dispositivos.
+cuatro transistores y cinco resistencias. En 1964, la empresa japonesa Toshiba comenzó a 
+producir circuitos integrados a gran escala, lo que permitió la producción de chips con 
+cientos de componentes.
 
 La tecnología de los circuitos integrados sigue evolucionando hoy en día, con chips más pequeños, más rápidos 
 y más eficientes energéticamente. La miniaturización y la integración de la electrónica siguen permitiendo 
@@ -118,7 +119,7 @@ que pudiera realizar múltiples tareas y que fuera accesible para el consumidor 
 En 1971, Intel presentó el primer microprocesador comercialmente exitoso, el Intel 4004. 
 Este microprocesador de 4 bits tenía una velocidad de reloj de 740 kHz y fue diseñado para su uso en calculadoras 
 y otros dispositivos electrónicos. En 1972, Intel lanzó el Intel 8008, que era un microprocesador de 8 bits 
-con una velocidad de reloj de 200 kHz. El Intel 8008 se utilizó en el primer sistema informático personal, 
+con una velocidad de reloj de 800 kHz. El Intel 8008 se utilizó en el primer sistema informático personal, 
 el MITS Altair 8800.
 
 En 1974, Intel lanzó el Intel 8080, que se convirtió en el primer microprocesador de uso general. 
@@ -147,17 +148,17 @@ como la inteligencia artificial, la virtualización y la aceleración por hardwa
 grandes cantidades de datos y realizar tareas especializadas con rapidez y precisión. En resumen, la evolución de 
 los microprocesadores ha sido impresionante en términos de capacidad de procesamiento, velocidad y tecnologías avanzadas.
 
+
+\newpage
 \section*{Conclusiones}
 
-En conclusión, la historia del transistor, circuito integrado y microprocesador es fascinante e innovadora. 
-Estos avances tecnológicos han cambiado la forma en que vivimos, trabajamos y nos comunicamos en el mundo moderno. 
+En conclusión, la historia del transistor, circuito integrado y microprocesador es fascinante e innovadora.  
 El transistor permitió la creación de dispositivos electrónicos más pequeños, eficientes y asequibles, 
 lo que a su vez condujo al desarrollo de los circuitos integrados y, finalmente, a la invención del microprocesador.
-
 El circuito integrado y el microprocesador son dos de los avances más importantes en la historia de la informática, 
-permitiendo la creación de computadoras personales y dispositivos móviles que han transformado la forma en que la gente trabaja, 
-estudia y se entretiene. Además, estos avances han mejorado significativamente la eficiencia y la precisión de los sistemas de control 
-y de automatización, lo que ha impulsado la industria manufacturera y otros sectores.
+permitiendo la creación de computadoras personales y dispositivos móviles. Además, estos avances han mejorado 
+significativamente la eficiencia y la precisión de los sistemas de control y de automatización, lo que ha 
+impulsado la industria manufacturera y otros sectores.
 
 A lo largo de la historia, el transistor, el circuito integrado y el microprocesador han sido objeto de una investigación 
 y desarrollo continuos, y se espera que sigan evolucionando en el futuro. El impacto de estos avances tecnológicos 
