--- a/references.bib
+++ b/references.bib
@@ -6,3 +6,31 @@
   year={2019},
   publisher={PRH Grupo Editorial}
 }
+@article{park2009history,
+  title={History of the transistor},
+  author={Park, Sungtae},
+  journal={IEEE Transactions on Electron Devices},
+  volume={56},
+  number={9},
+  pages={1745--1748},
+  year={2009},
+  publisher={IEEE},
+  doi={10.1109/TED.2009.2026485}
+}
+@book{sze1981physics,
+  title={Physics of Semiconductor Devices},
+  author={Sze, S.M.},
+  year={1981},
+  edition={2},
+  publisher={Wiley-Interscience}
+}
+@article{Wilson2010,
+  author = {Wilson, Richard G.},
+  year = {2010},
+  title = {The History of Microprocessors},
+  journal = {Computing in Science \& Engineering},
+  volume = {12},
+  number = {2},
+  pages = {90--94},
+  doi = {10.1109/MCSE.2010.38}
+}
