--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,7 @@
 \usepackage{caption}
 \usepackage{makeidx}
 \usepackage{hyperref}
+\usepackage{xcolor}
 \setlength{\parindent}{0cm}
 \bibliographystyle{IEEEtran}
 
@@ -76,7 +77,7 @@ electrónicos portátiles como calculadoras y radios de bolsillo.
 
 En la década de 1970, se produjo otro gran avance en la tecnología de transistores con el desarrollo del 
 transistor de unión bipolar de metal-óxido (MOS). Este transistor era aún más pequeño que los FET y consumía 
-menos energía, lo que lo hacía ideal para su uso en dispositivos móviles. 
+menos energía, lo que lo hacía ideal para su uso en dispositivos móviles.\cite{park2009history}
 
 En las décadas siguientes, la miniaturización de los transistores continuó a un ritmo acelerado. En la década de 1980, 
 se desarrollaron los transistores de alta velocidad para su uso en la electrónica de telecomunicaciones y en la década
@@ -116,7 +117,7 @@ pero pronto se desarrollaron chips con docenas, cientos y, finalmente, miles de 
 En 1961, Fairchild Semiconductor lanzó el primer circuito integrado comercial, que contenía 
 cuatro transistores y cinco resistencias. En 1964, la empresa japonesa Toshiba comenzó a 
 producir circuitos integrados a gran escala, lo que permitió la producción de chips con 
-cientos de componentes.
+cientos de componentes.\cite{sze1981physics}
 
 La tecnología de los circuitos integrados sigue evolucionando hoy en día, con chips más pequeños, más rápidos 
 y más eficientes energéticamente. La miniaturización y la integración de la electrónica siguen permitiendo 
@@ -165,7 +166,7 @@ A pesar de ser un gran avance en su época, el procesador 8008 tenía limitacion
 lo que hizo que en 1974, Intel lanzara el Intel 8080, que se convirtió en el primer microprocesador de uso general. 
 El procesador 8080 tenía una velocidad de reloj de hasta 2 MHz y podía procesar datos a una velocidad de hasta 500.000 
 operaciones por segundo. Contaba con un conjunto de instrucciones mejorado en comparación con el procesador 8008, lo que permitía 
-una mayor flexibilidad en la programación y el uso de software.
+una mayor flexibilidad en la programación y el uso de software.\cite{Wilson2010}
 
 Este procesador también ofreció una mayor capacidad de memoria, pudiendo direccionar hasta 64 KB de memoria RAM. Además, 
 tenía una arquitectura de bus de 8 bits, lo que lo hacía compatible con una amplia gama de dispositivos y sistemas.
@@ -183,9 +184,18 @@ Además, tenía una arquitectura de bus de 16 bits, lo que lo hacía compatible 
 El procesador 8086 fue utilizado en muchos sistemas de la época, incluyendo la popular computadora IBM PC, la primera computadora personal.
 
 A partir de ese momento, los microprocesadores se hicieron cada vez más rápidos y poderosos. En la década de 1980, surgieron los microprocesadores de 32 bits,
- como el Motorola 68000 y el Intel 80386. En la década de 1990, los microprocesadores de 64 bits, como el Intel Pentium Pro y el DEC Alpha, 
- comenzaron a ser utilizados en sistemas informáticos de alto rendimiento. Hoy en día, los microprocesadores son la base de la electrónica moderna, 
- y se utilizan en una amplia variedad de dispositivos, desde telefonos inteligentes y tabletas hasta automóviles y equipos médicos.
+como el Motorola 68000 y el Intel 80386. En la década de 1990, los microprocesadores de 64 bits, como el Intel Pentium Pro y el DEC Alpha, 
+comenzaron a ser utilizados en sistemas informáticos de alto rendimiento. Hoy en día, los microprocesadores son la base de la electrónica moderna, 
+y se utilizan en una amplia variedad de dispositivos, desde telefonos inteligentes y tabletas hasta automóviles y equipos médicos.
+
+\includegraphics[width=0.5\textwidth]{res/intel_4004.png}
+\includegraphics[width=0.5\textwidth]{res/intel_8008.png}
+\includegraphics[width=0.5\textwidth]{res/intel_8080.png}
+\includegraphics[width=0.5\textwidth]{res/amd_ryzen9.png}\\
+\begin{center}
+    Intel 4004, Intel 8008, Intel 8080, AMD Ryzen 9
+\end{center}
+
 \subsection*{Primera generación vs actualidad}
 A continuación se ofrece una comparación entre el primer microprocesador comercial de la historia, 
 el Intel 4004 y uno de los más avanzados y potentes del mercado actual, el AMD Ryzen 9 5950X. 
@@ -215,12 +225,12 @@ A lo largo de la historia, el transistor, el circuito integrado y el microproces
 y desarrollo continuos, y se espera que sigan evolucionando en el futuro. El impacto de estos avances tecnológicos 
 en nuestra sociedad es indudable, y es probable que continúen transformando nuestras vidas 
 en formas aún más sorprendentes e inesperadas en los años venideros.
-%\begin{thebibliography}{2}
 
-%\bibitem{Wal} \textsc{Walter Isaacson},\textit{Los Innovadores}, Editorial: National Geographic Books, 2019.
+% \begin{thebibliography}{2}
 
-%\end{thebibliography}
+% \bibitem{Wal} \textsc{Walter Isaacson},\textit{Los Innovadores}, Editorial: National Geographic Books, 2019.
+
+% \end{thebibliography}
 
 \bibliography{references}
-
 \end{document}
