--- a/report.tex
+++ b/report.tex
@@ -173,7 +173,7 @@ tenía una arquitectura de bus de 8 bits, lo que lo hacía compatible con una am
 El 8080 fue utilizado en muchas computadoras personales y sistemas embebidos de la época, incluyendo la popular computadora Altair 8800. 
 También se utilizó en aplicaciones militares, sistemas de control industrial y en el sector de la medicina. El éxito del procesador 8080 
 sentó las bases para el desarrollo de los procesadores de 16 y 32 bits, y allanó el camino para el auge de la computación personal en la década de 1980. 
-De hecho, es considerado por muchos como el "padre" de la familia de procesadores x86, que aún hoy en día es uno de los tipos de procesadores 
+De hecho, es considerado por muchos como el "padre" de la familia de procesadores x86, que incluso hoy en día es uno de los tipos de procesadores 
 más utilizados en las computadoras personales.
 
 Luego en 1978 fue lanzado el Intel 8086, el primer procesador de la familia x86 que marcó un hito en la evolución de los procesadores de computadora. 
